--- a/css/servicios.css
+++ b/css/servicios.css
@@ -150,7 +150,7 @@ header.scrolled {
     box-shadow: 0 12px 36px rgba(0,0,0,0.7);
     transform: translateY(-4px);
 }
-h1, h2 {
+h1 {
     color: #fff;
     letter-spacing: 0.6px;
 }
@@ -159,7 +159,7 @@ h1 {
     margin-bottom:18px;
     text-align:center;
     line-height:1.05;
-    text-shadow: 0 2px 18px rgba(0,0,0,0.7);
+    text-shadow: 0 2px 18px rgba(255, 255, 255, 0.7);
 }
 h2 {
     font-size:1.75rem;
@@ -185,7 +185,7 @@ main > p {
   margin: 15px 0 40px;
   font-size: 1.2rem;
   font-family:sans-serif;
-  color: #000000;
+  color: #ffffff;
 }
 
 section {
