--- a/css/index.css
+++ b/css/index.css
@@ -208,7 +208,7 @@ header.scrolled {
 }
 
 
-*css*
+
 .modal-cargando {
   display: none; /* Oculto por defecto */
   position: fixed;
@@ -250,7 +250,9 @@ header.scrolled {
   to { opacity: 1; transform: scale(1); }
 }
 .logo img {
-  display: block;
+  height: 60px; 
+  width: auto; 
+  margin-left: 0; 
 }
 .menu-toggle {
   display: none;
