--- a/css/index.css
+++ b/css/index.css
@@ -210,17 +210,13 @@ header.scrolled {
 
 
 .modal-cargando {
-  display: none; /* Oculto por defecto */
+  display: none;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(10, 10, 10, 0.7);
+  top: 0; left: 0; width: 100%; height: 100%;
+  background: rgba(10,10,10,0.7);
   backdrop-filter: blur(4px);
   z-index: 2000;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; align-items: center;
 }
 .modal-contenido {
   background: linear-gradient(135deg, #111, #1e1e1e);
