--- a/css/index.css
+++ b/css/index.css
@@ -218,14 +218,9 @@ header.scrolled {
   z-index: 2000;
   justify-content: center; align-items: center;
 }
-.modal-contenido {
-  background: linear-gradient(135deg, #111, #1e1e1e);
-  color: white;
-  padding: 30px 50px;
-  border-radius: 12px;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
-  animation: aparecerModal 0.4s ease;
+.modal-cargando .modal-contenido {
+  background: linear-gradient(135deg,#111,#1e1e1e);
+  color: #fff; padding: 30px 50px; border-radius: 12px; text-align:center;
 }
 .loader {
   border: 5px solid rgba(255, 255, 255, 0.2);
