--- a/css/index.css
+++ b/css/index.css
@@ -223,13 +223,13 @@ header.scrolled {
   color: #fff; padding: 30px 50px; border-radius: 12px; text-align:center;
 }
 .loader {
-  border: 5px solid rgba(255, 255, 255, 0.2);
+  border: 5px solid rgba(255,255,255,0.2);
   border-top: 5px solid #ff0000;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin: 0 auto 15px;
+  border-radius: 50%; width:50px; height:50px; margin:0 auto 15px;
   animation: girar 1s linear infinite;
+}
+@keyframes girar { from{transform:rotate(0)} to{transform:rotate(360deg)} }
+
 }
 @keyframes girar {
   from { transform: rotate(0deg); }
