--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@ header.scrolled {
     position: relative;
     width: 100%;
     height: 100vh; /* toda la altura de la pantalla */
-    background-image: url(img/fondomenu.jpeg);
+    background-image: url(galeria/fondomenu.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; /* cubre todo el viewport */
