--- a/css/servicios.css
+++ b/css/servicios.css
@@ -200,7 +200,7 @@ section {
 section h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: black;
+  color: rgb(255, 255, 255);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
