Modificando color info/contacto.css

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -327,14 +327,21 @@ header.scrolled {
 
 .contacto-cj.activa .info {
   display: block;
+  z-index: 10;
+  color: white;
+  position: relative;
 }
 
 .contacto-cj.info a {
-  color: #a00000;
+  color: #fff;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 700;
+  text-shadow: 0 0 6px rgba(255, 255, 255, 0.9);
 }
+
 .contacto-cj.info a:hover {
+  color: #ff4d4d;
+  text-shadow: 0 0 10px rgba(255,77,77,1);
   text-decoration: underline;
 }
 
