--- a/css/contactos.css
+++ b/css/contactos.css
@@ -325,7 +325,7 @@ header.scrolled {
   margin-top: 10px;
 }
 
-.contacto-cj.activo .info {
+.contacto-cj.activa .info {
   display: block;
   margin-top: 10px;
   position: relative;
